--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ body{
 	font-size: 20px;
 	margin: 0px;
     font-family: "Alegreya Sans", sans-serif;
-/*    background: linear-gradient(-45deg, #1c3454, #3E484C, #4C5C58);
-    background-size: 200% 200%;
-    animation: gradient 6s ease infinite;*/
     letter-spacing: 0.05em;
     animation: colorTransition 5s infinite;
 }
@@ -28,6 +25,12 @@ h1 {
   color: #AEE4ED;
   font-family: "Audiowide", sans-serif;
 }
+
+h2{
+    font-family: "Audiowide", sans-serif;
+    color: #ddddca
+}
+
 
 .navigation{
     padding-top: 0.5em;
@@ -110,4 +113,24 @@ h1 {
     width: 90%;
     border: 2px dashed #AEE4ED;
     margin: 0.5em;
-  }
+    padding: 1em;
+}
+
+.useCaseContainer p, .useCaseContainer ul{
+    color: #ddddca;
+    font-size: 1.1em;
+}
+
+.useCaseContainer h3{
+    color: #ddddca;
+    font-size: 1.2em;
+}
+
+.useCaseContainer a{
+    color: #ddddca;
+}
+
+.useCaseContainer a:active{
+    color: white;
+    font-weight: bold;
+}
